@@ -1,6 +1,8 @@
 lldpd (0.5.7)
  * Fixes:
     + Configure issue with NetSNMP and some linkers
+    + Fix infinite loop for the receive part: on certain conditions,
+      lldpd will stop sending packets and stop updating local data.
 
 lldpd (0.5.6)
   * Features:
